--- a/index.html
+++ b/index.html
@@ -18,12 +18,11 @@
                     <div class="slider-container"><br>
                         <input type="range" id="slider" value="100" style="width: 30%;">
                     </div>
-                    <div class="loading-container">
-                        <br><br><br><br><label for="loading">LOADING PICTURES</label><br>
-                        <progress id="loading" value="32" max="100"> 32% </progress>
+                    <div class="gif-loading-container"><br><br><br><br><br>
+                        <img src="img/loading.gif" alt="loading" id="gif-loading">
                     </div>
                     
-                    <div class="img-container">
+                    <div class="img-laptop-container">
                     </div>
                 </div>
             </div>
