--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
                     <div class="slider-container"><br>
                         <input type="range" id="slider" value="100" style="width: 30%;">
                     </div>
-                    <div class="gif-loading-container"><br><br><br><br><br>
+                    <div class="gif-loading-container">
                         <img src="img/loading.gif" alt="loading" id="gif-loading">
                     </div>
                     
