--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
             </div>
         </div>
         
+        <script>
+            $('.gif-loading-container').hide();
+        </script>
         <script src="js/script.js"></script>
     </body>
 </html>
