Update loading to assets

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                         <input type="range" id="slider" value="100" style="width: 30%;">
                     </div>
                     <div class="gif-loading-container">
-                        <img src="img/loading/loading.gif" alt="loading" id="gif-loading">
+                        <img src="img/assets/loading.gif" alt="loading" id="gif-loading">
                     </div>
                     
                     <div class="img-laptop-container">
